--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'HX'
 - !lcsh 'Utopias'
+- GITenberg
 title: 'Another World: Fragments from the Star City of Montalluyah'
 url: http://www.gutenberg.org/ebooks/16503
